--- a/css/grid.css
+++ b/css/grid.css
@@ -2,7 +2,7 @@
 
 .container {
     display: grid;
-    grid-template-columns: 200px 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 150px 1fr auto;
     width: 900px;
     height: 900px;
